--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@ hst {
 			<tbody><tr><td align="left" valign="top">
 			
 
-			<font size="5"><b>UdeS IFT603/712: Techniques d'Apprentissage, automne 2024</b></font><br><br>
+			      <font size="5"><b>UdeS IFT603/712: Techniques d'Apprentissage, automne 2024</b></font><br><br>
+			      <font size="4">Création de cours : <a href="https://jodoin.github.io/">Pierre-Marc Jodoin</a>,<br>
+				modifications pour automne 2024 : Toby Dylan HOCKING.</font>			      <br><br>
 
 			<font size="4"><b>Objectifs du cours</b></font><br>
 			<hr align="left" width="85%">
@@ -464,6 +466,6 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 			</tbody></table>
 			
 			</center>
-<font size="4">Création de cours : Pierre-Marc Jodoin, modifications pour automne 2024 : Toby Dylan Hocking</font>
+
 			</td>
 		</tr></tbody></table></body></html>
