gitlab + new plan

--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		
 
 		<br><br>
-		<b>NOTE IMPORTANTE 1</b></b> : En plus de votre code, veuillez soumettre un fichier <b>"gitlab.txt"</b> dans lequel vous donnez le lien vers votre dépôt gitlab.<br>
+		<b>NOTE IMPORTANTE 1</b></b> : En plus de votre code, veuillez soumettre un fichier <b>"gitlab.txt"</b> dans lequel vous donnez le lien vers votre dépôt sur <a href="https://depot.dinf.usherbrooke.ca">le gitlab du département d'informatique</a>.<br>
 		<b>NOTE IMPORTANTE 2</b> : En plus de vos documents de travail, vous devez remplir, signer et joindre à votre travail le formulaire d'intégrité que voici : <a href="https://docs.google.com/document/d/1-raKfIQleF6UWe0MsuegT9JnDhjhbxNdSpbaFXadJP0/edit?usp=sharing"> formulaire d'intégrité</a></b>.<br>
 		<b>NOTE IMPORTANTE 3</b> : En plus de vos documents de travail, vous devez remplir et joindre à votre travail l'agenda d'équipe que voici : <a href="https://docs.google.com/spreadsheets/d/1VVsGbUnHBbLhmscHSMmCIrPjn7GgZrnmXE_9xCvVu0Q/edit?usp=sharing"> agenda d'équipe</a>
 	<br>    <b>NOTE IMPORTANTE 4</b> : veuillez bien utiliser git car une mauvaise utilisation pourra entraîner une <b> perte de points aux TP3 et TP4 ainsi que pour le projet (ift712)</b>.
