--- a/index.html
+++ b/index.html
@@ -125,19 +125,20 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
                               <br>
                 <b>1- Concepts fondamentaux</b> [<a href="./notes/01_concepts_fondamentaux_2pages.pdf">pdf</a>]
 		[<a href="./notes/01_concepts_fondamentaux_3pages.pdf">pdf</a>]
-
-            <br><br>Evaluation
+		[<a href="./ipython_notebook/Concepts_fondamentaux.ipynb">ipython notebook</a>]
+		
+            <br><br>Evaluation/CV et plus proche voisins : 
 		[<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/02-cross-validation.pdf">Hocking CV pdf</a>]
 		[<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/03-nearest-neighbors.pdf">Hocking nearest neighbors pdf</a>]
-		[<a href="./ipython_notebook/Concepts_fondamentaux.ipynb">ipython notebook</a>]<br>
+	    [<a href="https://github.com/tdhock/2024-08-ift603-712/tree/main/cv-evaluation-examples">Resultats sur 19 jeux de données</a>]
+	    [<a href="cv-evaluation-examples/zipUSPS_error_algos_mean_SD.png">zipUSPS</a>]
+	    [<a href="https://tdhock.github.io/blog/2024/viz-pred-err/">Visualisation du test de Student (T-test)</a>]
+	    <br>
 		Interactives :
 		[<a href="https://tdhock.github.io/2020-02-03-capacity-polynomial-degree/">polynome surapprentissage</a>]
 		[<a href="https://tdhock.github.io/2023-12-04-capacity-polynomial-degree-several-patterns/">polynome surapprentissage + plusieurs jeux de données</a>]
 		[<a href="https://tdhock.github.io/2023-12-04-degree-neighbors/">polynome surapprentissage + voisins</a>]
 		[<a href="https://tdhock.github.io/2019-01-nearest-neighbor-regression-one-split/">voisins surapprentissage</a>]
-	    [<a href="https://github.com/tdhock/2024-08-ift603-712/tree/main/cv-evaluation-examples">Resultats sur 19 jeux de données</a>]
-	    [<a href="cv-evaluation-examples/zipUSPS_error_algos_mean_SD.png">zipUSPS</a>]
-	    [<a href="https://tdhock.github.io/blog/2024/viz-pred-err/">Visualisation du test de Student (T-test)</a>]
             <br><br>
             <a href="https://www.youtube.com/watch?v=dauUhCvDJ8w&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=2&t=0s">Présentation 0</a> (2:19)<br>
             <a href="https://www.youtube.com/watch?v=pN0_4iV3v_A&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=3&t=0s">Présentation 1</a> (20:27)<br>
