--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		[<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/03-nearest-neighbors.pdf">Hocking nearest neighbors pdf</a>]
 	    [<a href="https://github.com/tdhock/2024-08-ift603-712/tree/main/cv-evaluation-examples">Resultats sur 19 jeux de données</a>]
 	    [<a href="cv-evaluation-examples/zipUSPS_error_algos_mean_SD.png">zipUSPS</a>]
+	    [<a href="cv-evaluation-examples/NSCH_autism_error_algos_mean_SD.png">NSCH_autism</a>]
 	    [<a href="cv-evaluation-examples/zz_error_minutes_4_data.png">Quatre jeux de données, taux d'erreur et temps de calcul</a>]
 	    [<a href="https://tdhock.github.io/blog/2024/viz-pred-err/">Visualisation du test de Student (T-test)</a>]
 	    <br>
