--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		[<a href="https://tdhock.github.io/2020-02-03-capacity-polynomial-degree/">polynome surapprentissage</a>]
 		[<a href="https://tdhock.github.io/2023-12-04-capacity-polynomial-degree-several-patterns/">polynome surapprentissage + plusieurs jeux de données</a>]
 		[<a href="https://tdhock.github.io/2023-12-04-degree-neighbors/">polynome surapprentissage + voisins</a>]
-		[<a href="https://tdhock.github.io/2019-01-nearest-neighbor-regression-one-split/">voisins surapprentissage</a>]
+	    [<a href="https://tdhock.github.io/2019-01-nearest-neighbor-regression-one-split/">voisins surapprentissage</a>]
+	    [<a href="https://tdhock.github.io/2024-09-16-K-fold-CV-train-sizes-regression">CV regression rpart vs featureless</a>]
             <br><br>
             <a href="https://www.youtube.com/watch?v=dauUhCvDJ8w&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=2&t=0s">Présentation 0</a> (2:19)<br>
             <a href="https://www.youtube.com/watch?v=pN0_4iV3v_A&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=3&t=0s">Présentation 1</a> (20:27)<br>
