--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		
             <br><br>Evaluation/CV et plus proche voisins : 
 		[<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/02-cross-validation.pdf">Hocking CV pdf</a>]
+		[<a href="cv-slides/HOCKING-cv-slides.pdf">Hocking CV simulations + sur-apprentissage pdf</a>]
 		[<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/03-nearest-neighbors.pdf">Hocking nearest neighbors pdf</a>]
 	    [<a href="https://github.com/tdhock/2024-08-ift603-712/tree/main/cv-evaluation-examples">Resultats sur 19 jeux de données</a>]
 	    [<a href="cv-evaluation-examples/zipUSPS_error_algos_mean_SD.png">zipUSPS</a>]
