--- a/index.html
+++ b/index.html
@@ -277,9 +277,10 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 	    <tr bgcolor="#fbfbfb">
             <td> Semaine 8, 16-17 oct</td>
 		    
-			<td><b>Examen périodique</b>
+			<td><b>Examen intra</b>
 		    </td> 
-		    <td align="right">
+	    <td align="right">
+	      17 oct, 8:30-11:20
 		    </td>
 		</tr>
 
