--- a/index.html
+++ b/index.html
@@ -182,6 +182,11 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 	      [<a href="./notes/03_regression_lineaire_3pages.pdf">pdf</a>]
 	      [<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/09-regression.pdf">Hocking regression pdf</a>]
             	[<a href="./ipython_notebook/Regression.ipynb">ipython notebook</a>]<br> 
+              <br>
+	      Interactives de descent de gradient pour la régression : 
+	      [<a href="https://tdhock.github.io/2019-02-05-linear-regression-1d-grad-desc-ozone-steps/">Ozone data</a>]
+	      [<a href="https://ml.nau.edu/viz/2022-02-02-gradient-descent-regression/">Simulated data</a>]
+	      [<a href="https://tdhock.github.io/2019-02-14-L2-regularization/">Ridge/L2 regularization</a>]
             <br><br>
                      
             <a href="https://www.youtube.com/watch?v=AV3fco1UQGE&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=13&t=0s"> Régression linéaire 0</a> (10:29)<br>
@@ -200,9 +205,19 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		<tr bgcolor="#fbfbfb">
             <td> Semaine 4</td>
 			<td><b>4- Classification linéaire</b> [<a href="./notes/04_classification_lineaire_2pages.pdf">pdf</a>] 
-			[<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/04-linear-models.pdf">Hocking pdf</a>] 
 			[<a href="./notes/04_classification_lineaire_3pages.pdf" color='FF0000'>pdf</a>]
-			[<a href="./ipython_notebook/Classification_lineaire.ipynb">ipython notebook</a>]<br>
+			  [<a href="./ipython_notebook/Classification_lineaire.ipynb">ipython notebook</a>]<br>
+
+			  [<a href="calculus-facts.jpg">Rappels de dérivés :
+			    <img width=100 src="calculus-facts.jpg" /></a>]
+			  de 
+			  [<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/04-linear-models.pdf">Hocking pdf</a>]. Voir aussi Jacobian dans le livre de Goodfellow et al, Deep Learning : <a href="https://www.deeplearningbook.org/contents/numerical.html">4.3.1 Beyond the Gradient: Jacobian and Hessian Matrices</a>, <a href="https://www.deeplearningbook.org/contents/mlp.html">6.5.2 Chain Rule of Calculus</a>.
+			  <br />
+			  Interactive :
+			  [<a href="https://rcdata.nau.edu/genomic-ml/animint-gallery/2023-01-30-neural-networks-sim">Gradient descent for 2d simulated data, linear model and neural network</a>]
+			  <br />
+			  <br />
+			  
 		    <a href="https://www.youtube.com/watch?v=JfVYiJshWaA&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=19&t=0s"> Classification linéaire 0</a> (7:03)<br>
 		    <a href="https://www.youtube.com/watch?v=BJH-4ZCj6ZY&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=20&t=0s"> Classification linéaire 1</a> (7:40)<br>
 		    <a href="https://www.youtube.com/watch?v=2u89bs1AldI&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=21&t=0s"> Classification linéaire 2</a> (12:05)<br>
@@ -464,8 +479,9 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 			<font color="#89bc23" size="3"> Professeur</font><br>
 			Toby Dylan HOCKING<br><br>
 
-			<font color="#89bc23" size="3"> Correcteur</font><br>
+			<font color="#89bc23" size="3"> Correcteurs</font><br>
 			<a href="mailto:Jeremi.Levesque@usherbrooke.ca">Jeremi Lévesque</a>
+			<a href="mailto:antoine.theberge@usherbrooke.ca">Antoine Théberge</a>
             <br><br>
 			
 			<font color="#89bc23" size="3"> Périodes de cours</font><br>
