--- a/index.html
+++ b/index.html
@@ -293,9 +293,11 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
             <td> Semaine 8, 16-17 oct</td>
 		    
 			<td><b>Examen intra</b>
-		    </td> 
+	      17 oct, 8:30-10:20
+			  <br>D7-2021: IFT603 + IFT712 de Allam à El-Yazidi
+			  <br>D7-3021: IFT712 de Errafik à Zouhair
+			</td>
 	    <td align="right">
-	      17 oct, 8:30-11:20
 		    </td>
 		</tr>
 
