--- a/index.html
+++ b/index.html
@@ -452,9 +452,9 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 	
 	</tr>
     <tr> <td width="100">Tp1</td> <td><a href="./demos/tp1/tp1.pdf">Description (remise : 8 oct)</a> </td><td> <a href="./demos/tp1/progTP1.zip"> code</a> <a href="./demos/tp1/bareme1.pdf">bareme</a><br> </tr>
-    <tr> <td width="100">Tp2</td> <td><a href="./demos/tp2/tp2.pdf">Description (remise : TODO)</a> </td><td> <a href="./demos/tp2/progTP2.zip"> code</a> <a href="./demos/tp2/bareme2.pdf">bareme</a> </td></tr>
-    <tr> <td width="100">Tp3</td> <td><a href="./demos/tp3/tp3.pdf">Description (remise : TODO)</a> </td><td> <a href="./demos/tp3/progTP3.zip"> code</a> <a href="./demos/tp3/bareme3.pdf">bareme</a> </td></tr>
-    <tr> <td width="100">Tp4</td> <td><a href="./demos/tp4/tp4.pdf">Description (remise : TODO)</a> </td><td> <a href="./demos/tp4/progTP4.zip"> code</a> <a href="./demos/tp4/bareme4.pdf">bareme</a></td></tr>
+    <tr> <td width="100">Tp2</td> <td><a href="./demos/tp2/tp2.pdf">Description (remise : 22 oct)</a> </td><td> <a href="./demos/tp2/progTP2.zip"> code</a> <a href="./demos/tp2/bareme2.pdf">bareme</a> </td></tr>
+    <tr> <td width="100">Tp3</td> <td><a href="./demos/tp3/tp3.pdf">Description (remise : 5 nov)</a> </td><td> <a href="./demos/tp3/progTP3.zip"> code</a> <a href="./demos/tp3/bareme3.pdf">bareme</a> </td></tr>
+    <tr> <td width="100">Tp4</td> <td><a href="./demos/tp4/tp4.pdf">Description (remise : 19 nov)</a> </td><td> <a href="./demos/tp4/progTP4.zip"> code</a> <a href="./demos/tp4/bareme4.pdf">bareme</a></td></tr>
     <tr> <td width="100"></td>    <td><a href="./softmax_grad.html">Le softmax et son gradient : kit de survie!</a> </td><td> </td></tr> 
     <tr> <td width="100">Projet-ift712</td><td>Voir plan de cours (remise : 15 avril)</td><td>  </a></td></tr>
 
