--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 			  <br>D7-2021: IFT603 + IFT712 de Allam à El-Yazidi
 			  <br>D7-3021: IFT712 de Errafik à Zouhair
 			  <ul>
+                            <li>vous avez droit d'une page de notes, recto verso, écrit à la main.</li>
 			    <li>Il peut y avoir des questions vraisemblables à <a href="https://github.com/tdhock/2023-08-deep-learning/tree/main/exams">mes examens précédants</a>.</li>
 			    <li>Complexité asymptotique, d'entraînement et de prévision, pour modèle linéaire, et pour plus proche voisins</li>
 			    <li>Comment calculer les prévisions, d'un modèle linéaire / plus proche voisins ? (si vous avez un vecteur de données x=[2, 5] et un vecteur de poids w=[-1,2], etc)</li>
