--- a/index.html
+++ b/index.html
@@ -299,7 +299,8 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		      <b>7- Réseaux de neurones multi-couches</b>
 		      [<a href="./notes/07_MLP_2pages.pdf">pdf</a>] 
 		      [<a href="./notes/07_MLP_3pages.pdf">pdf</a>] 
-		      [<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/torch-part1/06-backprop.pdf">Hocking pdf</a>] 
+		      [<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/torch-part1/06-backprop.pdf">Hocking pdf neural networks</a>]
+		      [<a href="https://github.com/tdhock/2023-08-deep-learning/blob/main/slides/torch-part1/12-convolutional-networks.pdf">Hocking pdf convolutional</a>]
               <br><br>
               <a href="https://www.youtube.com/watch?v=jFNJ1aEU2mM&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=33&t=0s"> Réseaux de neurones multi-couches 0</a> (8:02)<br>
               <a href="https://www.youtube.com/watch?v=8vTLUxhG4hU&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=34&t=0s"> Réseaux de neurones multi-couches 1</a> (17:08)<br>
