arbre de decision viz

--- a/index.html
+++ b/index.html
@@ -373,9 +373,12 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 		Semaine 13, 20-21 nov<br />
 		Semaine 14, 27-28 nov
 	      </td>
-		    <td> <b>8- Combinaison de modèles </b> [<a href="./notes/08_combinaison_de_modeles_2pages.pdf">pdf</a>]
-			[<a href="./notes/08_combinaison_de_modeles_3pages.pdf">pdf</a>] 
-            [<a href="./ipython_notebook/Combinaison_de_modeles.ipynb">ipython notebook</a>]<br><br>
+	      <td> <b>8- Combinaison de modèles </b> [<a href="./notes/08_combinaison_de_modeles_2pages.pdf">pdf</a>]
+		[<a href="./notes/08_combinaison_de_modeles_3pages.pdf">pdf</a>] 
+		[<a href="./ipython_notebook/Combinaison_de_modeles.ipynb">ipython notebook</a>]
+		[<a href="https://tdhock.github.io/2024-11-23-greedy-decision-tree/">Interactive : arbre de décision</a>]
+		<br><br>
+		      
             
             <a href="https://www.youtube.com/watch?v=rasxq1hkPTA&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=42&t=0s"> Combinaison de modèles 0</a> (13:08)<br>
             <a href="https://www.youtube.com/watch?v=LpLcCeq-t-I&list=PLRsdyg1KyVVdnQbSd7ejhY8X8qV8Hie1r&index=43&t=0s"> Combinaison de modèles 1</a> (21:50)<br>
