--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@ Les séances magistrales devraient prendre une à deux heures par semaine.  Vous
 
 		<tr>
 		  <td>
-		Semaine 15, 4-5 déc
+		Semaine 15, 4 déc (pas de classe le 5 déc)
 		  </td>
 		  <td>
 		    Révision pour examen final
